grocy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grocy
  name: grocy
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: grocy
  type: ClusterIP
