grocy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: le-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
  name: grocy
  labels:
    app: grocy
spec:
  rules:
    - host: grocy.waltr.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocy
                port:
                  number: 80
  tls: # < placing a host in the TLS config will indicate a certificate should be created
    - hosts:
      - grocy.waltr.tech
      secretName: grocywaltrtech-cert # < cert-manager will store the created certificate in this secret
